# endstone_livechat

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/endstone_livechat/: __init__.py  livechat.py  main.py
